--- a/index.html
+++ b/index.html
@@ -30,16 +30,21 @@
             </nav>
             <ul class="list">
                 <li class="list-auth">
-                    <svg class="icon">
-                        <use xlink:href="./images/icons/sprite.svg#icon-mail"></use>
-                    </svg>
-                    <a class="list-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="list-mail"  href="mailto:info@devstudio.com">
+                        <svg class="icon">
+                            <use xlink:href="./images/icons/sprite.svg#icon-mail">
+                            </use>
+                        </svg>
+                        info@devstudio.com  
+                    </a>
                 </li>
                 <li class="list-auth">
-                    <svg class="icon">
-                        <use xlink:href="./images/icons/sprite.svg#icon-phone"></use>
-                    </svg>
-                    <a class="list-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="list-tel" href="tel:+380961111111">
+                        <svg class="icon">
+                            <use xlink:href="./images/icons/sprite.svg#icon-phone">
+                            </use>
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -267,61 +272,49 @@
             <section class="clients section">
                 <div class="container">
                     <h2 class="clients-text">Постоянные клиенты</h2>
-                    <ul class="clients-list">
-                        <div class="clients-border ">   
+                    <ul class="clients-list">  
                             <li class="clients-link">
-                                <a href="">
+                                <a href="" class="clients-href">
                                     <svg class="icon-clients">
                                     <use xlink:href="./images/icons/sprite.svg#icon-yaco"></use>
                                     </svg>
                                 </a>
                             </li>
-                        </div>
-                            <div class="clients-border">
                             <li class="clients-link">
-                                <a href="#">
+                                <a href="#" class="clients-href">
                                     <svg class="icon-clients">
                                     <use xlink:href="./images/icons/sprite.svg#icon-tagline"></use>
                                     </svg>
                                 </a>
                             </li>
-                        </div>
-                            <div class="clients-border">
                             <li class="clients-link">
-                                <a href="#">
+                                <a href="#" class="clients-href">
                                     <svg class="icon-clients" >
                                         <use xlink:href="./images/icons/sprite.svg#icon-company"></use>
                                     </svg>
                                 </a>
                             </li>
-                        </div>
-                            <div class="clients-border">
                             <li class="clients-link">
-                                <a href="#">
+                                <a href="#" class="clients-href">
                                     <svg class="icon-clients">
                                     <use xlink:href="./images/icons/sprite.svg#icon-foster"></use>
                                     </svg>
                                 </a>
                             </li>
-                        </div>
-                            <div class="clients-border">
                             <li class="clients-link">
-                                <a href="#">
+                                <a href="#" class="clients-href">
                                     <svg class="icon-clients">
                                     <use xlink:href="./images/icons/sprite.svg#icon-brand"></use>
                                     </svg>
                                 </a>    
                             </li>
-                        </div>
-                            <div class="clients-border">
                             <li class="clients-link">
-                                <a href="#">
+                                <a href="#" class="clients-href">
                                     <svg class="icon-clients">
                                     <use xlink:href="./images/icons/sprite.svg#icon-companytagline"></use>
                                     </svg>
                                 </a>
                             </li>
-                        </div>
                     </ul>
                     
                 </div>
