--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
                 <a class="logo" href=""><span class="slogan">Web</span><span class="slogan-studio">Studio</span> </a>
                 <ul class="list">
                     <li class="list-item">
-                        <a class="item-img" href  ="">Студия</a>
+                        <a class="item-img" href  ="./index.html">Студия</a>
                     </li>
                     <li class="list-item">
-                        <a class="item-img" href  ="./portfolio.html">Портфолио</a>
+                        <a class="item-img" href  ="">Портфолио</a>
                     </li>
                     <li class="list-item">
                         <a class="item-img" href  ="">Контакты</a>
@@ -32,16 +32,21 @@
             </nav>
             <ul class="list">
                 <li class="list-auth">
-                    <svg class="icon">
-                        <use xlink:href="./images/icons/sprite.svg#icon-mail"></use>
-                    </svg>
-                    <a class="list-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="list-mail"  href="mailto:info@devstudio.com">
+                        <svg class="icon">
+                            <use xlink:href="./images/icons/sprite.svg#icon-mail">
+                            </use>
+                        </svg>
+                        info@devstudio.com  
+                    </a>
                 </li>
                 <li class="list-auth">
-                    <svg class="icon">
-                        <use xlink:href="./images/icons/sprite.svg#icon-phone"></use>
-                    </svg>
-                    <a class="list-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="list-tel" href="tel:+380961111111">
+                        <svg class="icon">
+                            <use xlink:href="./images/icons/sprite.svg#icon-phone">
+                            </use>
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
