--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,15 @@
             <!-- <h2>project</h2> -->
             <ul class="project">
                 <li class="grid">
-                    <a href="" class="grid-link">
-                        <img src="./images/leptop.jpg" alt="leptop" width="370">
+                    
+                        <a href="" class="grid-link">
+                            <div class="overlay">
+                                <img src="./images/leptop.jpg" alt="leptop" width="370">
+                                <div class="overlay-text">
+                                    <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
+                    
                         <div class="desc">
                             <h3 class="title">Технокряк</h3>
                         <p class="task">Веб-сайт</p>
@@ -75,7 +82,12 @@
                 </li>
                 <li class="grid">
                     <a href="" class="grid-link">
+                        <div class="overlay">
                         <img src="./images/basketball.jpg" alt="basketball" width="370">
+                        <div class="overlay-text">
+                            <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                         <div class="desc">
                             <h3 class="title">Постер New Orlean vs Golden Star</h3>
                         <p class="task">Дизайн</p>
@@ -84,7 +96,12 @@
                 </li>
                 <li class="grid">
                     <a href="" class="grid-link">
+                        <div class="overlay">
                         <img src="./images/restourant.jpg" alt="restourant" width="370">
+                        <div class="overlay-text">
+                            <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                         <div class="desc">
                             <h3 class="title">Ресторан Seafood</h3>
                         <p class="task">Приложение</p>
@@ -93,7 +110,12 @@
                 </li>
                 <li class="grid">
                     <a href="" class="grid-link">
+                        <div class="overlay">
                         <img src="./images/headphones.jpg" alt="headphones" width="370">
+                        <div class="overlay-text">
+                            <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                         <div class="desc">
                             <h3 class="title">Проект Prime</h3>
                         <p class="task">Маркетинг</p>
@@ -102,7 +124,12 @@
                 </li>
                 <li class="grid">
                     <a href="" class="grid-link">
+                        <div class="overlay">
                         <img src="./images/box.jpg" alt="box" width="370">
+                        <div class="overlay-text">
+                            <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                         <div class="desc">
                             <h3 class="title">Проект Boxes</h3>
                         <p class="task">Приложение</p>
@@ -111,7 +138,12 @@
                 </li>
                 <li class="grid">
                     <a href="" class="grid-link">
+                        <div class="overlay">
                         <img src="./images/monitor.jpg" alt="monitor" width="370">
+                        <div class="overlay-text">
+                            <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                         <div class="desc">
                             <h3 class="title">Inspiration has no Borders</h3>
                         <p class="task">Веб-сайт</p>
@@ -120,7 +152,12 @@
                 </li>
                 <li class="grid">
                     <a href="" class="grid-link">
+                        <div class="overlay">
                         <img src="./images/book.jpg" alt="book" width="370">
+                        <div class="overlay-text">
+                            <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                         <div class="desc">
                             <h3 class="title">Издание Limited Edition</h3>
                         <p class="task">Дизайн</p>
@@ -129,7 +166,12 @@
                 </li>
                 <li class="grid">
                     <a href="" class="grid-link">
+                        <div class="overlay">
                         <img src="./images/tag.jpg" alt="tag" width="370">
+                        <div class="overlay-text">
+                            <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                         <div class="desc">
                             <h3 class="title">Проект LAB</h3>
                         <p class="task">Проект LAB</p>
@@ -138,7 +180,12 @@
                 </li>
                 <li class="grid">
                     <a href="" class="grid-link">
+                        <div class="overlay">
                         <img src="./images/handonleptop.jpg" alt="handonleptop" width="370">
+                        <div class="overlay-text">
+                            <p class="grid-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                         <div class="desc">
                             <h3 class="title">Growing Business</h3>
                         <p class="task">Приложение</p>
